# pyhttp

./: .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  setup.py  temp.py
.pytest_cache/v/cache/: nodeids
HttpTesting/: LICENSE  __init__.py  main.py  tmp.py
HttpTesting.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
HttpTesting/case/: conftest.py  extfunc.py  temp.txt  test_load_case.py
HttpTesting/config/: config.yaml
HttpTesting/globalVar/: gl.py
HttpTesting/template/: template.yaml
httptesting/: __init__.py  main.py
httptesting/case/: conftest.py  extfunc.py  pytest.ini  test_load_case.py
httptesting/config/: config.yaml
httptesting/template/: template.yaml
httptesting12/: __init__.py
tests/: test_parse.py
