[tool.poetry]
name = "HttpTesting"
version = "1.1.26"
description = "HTTP(S) testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["yhleng <lengyaohui@163.com>"]

homepage = "https://github.com/HttpTesting/HttpTesting"
repository = "https://github.com/HttpTesting/HttpTesting"
documentation = "https://github.com/HttpTesting/HttpTesting/blob/master/readme.md"

keywords = ["HTTP", "api", "test", "requests"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

include = ["README.md", "HttpTesting/config/*","HttpTesting/template/*","/*"]

[tool.poetry.dependencies]
pytest = "^5.0.1"
PyYAML = "^5.1"
requests = "^2.18.4"
requests-toolbelt = "^0.8.0"
pytest-html = "^1.21.1"
pytest-repeat = "^0.8.0"
pytest-rerunfailures = "^7.0"
pytest-xdist = "^1.29.0"


[tool.poetry.dev-dependencies]
python = "^3.6"


[tool.poetry.scripts]
amt = "HttpTesting.main:run_min"
AMT = "HttpTesting.main:run_min"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"