[tool.poetry]
name = "HttpTesting"
version = "1.1.54"
description = "HTTP(S) Testing."
license = "Apache-2.0"
readme = "README.md"
authors = ["lengyaohui <lengyaohui@gmail.com>"]

homepage = "https://github.com/HttpTesting/pyhttp"
repository = "https://github.com/HttpTesting/pyhttp"


keywords = ["HTTP", "api", "test", "requests"]
classifiers  =  [ 
    "Environment :: Console",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
] 

include = ["LICENSE", "HttpTesting/templates/*", "HttpTesting/config/*", "HttpTesting/case/*"]

[tool.poetry.dependencies]
Python = "^3.5"
pyyaml = "5.1.1"
pytest = "5.0.1"
pytest-html = "1.21.1"
pytest-repeat = "0.8.0"
pytest-rerunfailures = "7.0"
pytest-xdist = "1.29.0"
requests = "2.22.0"
requests-toolbelt = "0.9.1"

[tool.poetry.dev-dependencies]


[tool.poetry.scripts]
amt = "HttpTesting.main:run_min"
AMT = "HttpTesting.main:run_min"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"